fixed too large input box glitch

--- a/include/css/base.css
+++ b/include/css/base.css
@@ -65,6 +65,11 @@ textarea {
   color: #a8dff4;
 }
 
+input:focus {
+  border: 0;
+  outline: none;
+}
+
 html {
   height: 100%;
   font-size: 1.0em;
