--- a/include/css/header.css
+++ b/include/css/header.css
@@ -109,15 +109,18 @@
 #wrapper header nav div div#smallSearchBar {
   display: none;
   width: 100%;
+  border-top: 1px solid #74b1c6;
+  border-left: 1px solid #74b1c6;
+  background-color: #29505f;
+  vertical-align: middle;
+  border-bottom: 1px solid #74b1c6;
 }
 
 #wrapper header nav div div#smallSearchBar input {
+  font-size: 0.9em;
   border: 0;
-  border-left: 1px solid #74b1c6;
-  border-bottom: 1px solid #74b1c6;
-  border-top: 1px solid #74b1c6;
   background-color: #29505f;
-  padding: 0.8em 0 0.8em 0.5em;
+  padding: 0.625em 0 0.5em 0.5em;
   color: #ffffff;
   width: 100%;
 }
